--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang=en-us>
 <head>
 <meta name=generator content="Hugo 0.90.1">
-<title>Attix Zhang web site</title>
+<title>Attix Zhang resume</title>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -9,7 +9,7 @@
 <meta name=author content="Attix Zhang">
 <link rel="shortcut icon" href=favicon.ico>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900">
-<link rel=stylesheet href=http://example.org/assets/css/devresume.min.6832e93fae6ea272b2bb105c6ba708595ab7cdb121f8b9f29960918405de0053.css>
+<link rel=stylesheet href=https://attixzhangcs.github.io/azhang.github.io/scss/devresume.scss>
 </head>
 <body>
 <div class=main-wrapper>
@@ -34,7 +34,7 @@
 <hr>
 <div class="resume-intro py-3">
 <div class="media flex-column flex-md-row align-items-center">
-<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src=http://example.org/assets/images/avatar.png alt=image>
+<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src=https://attixzhangcs.github.io/azhang.github.ioassets/images/avatar.png alt=image>
 <div class="media-body text-left">
 <p class=mb-0>Summarise your career here. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.</p>
 </div>
